--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/marked": "^4.0.7",
     "axios": "^1.2.0",
     "element-plus": "^2.2.26",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.2.4",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
