--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/marked": "^4.0.7",
     "axios": "^1.2.0",
     "element-plus": "^2.2.26",
     "highlight.js": "^11.7.0",
+    "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "marked": "^4.2.4",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
