--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less": "^4.1.3",
     "lodash": "^4.17.21",
     "marked": "^4.2.4",
+    "moment": "^2.29.4",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
